data/derived/fa15/progs/unify/prog2697.ml.out
Characters 297-298:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int list -> 'a -> int * int list
       but an expression was expected of type int list -> 'a -> int list
       Type int * int list is not compatible with type int list 
